# DataSae

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  data.json  docker-compose.run.yml  docker-compose.yml  functions.md  main.py  pyproject.toml  requirements.txt  run_docker.sh  setup.cfg  setup.py  template.pypirc
.github/workflows/: docker.yaml  python.yaml  python_docker.yaml  repository.yaml
data-quality-framework/: core.py
data-quality-framework/connection/: file.py  google.py  postgresql.py
data-quality-framework/quality/: completeness.py
data_quality_framework/: core.py
data_quality_framework/connection/: api.py  file.py  google.py  postgresql.py
data_quality_framework/export/: rules.py
data_quality_framework/quality/: comformity.py  completeness.py  metadata.py  uniqueness.py
data_quality_framework/quality/sql/: filterting.sql
datasae/: __init__.py  __main__.py  boolean.py  core.py  example.py  exception.py  float.py  geospatial.py  integer.py  string.py  timestamp.py  utils.py
datasae/api/: gunicorn_config.py  main.py
datasae/connection/: google.py  postgresql.py
datasae/connector/: __init__.py  postgresql.py
datasae/converter/: __init__.py  google_spreadsheet.py  gsheet.py  local.py  minio.py  postgresql.py  s3.py  sql.py
datasae/converter/config/: minio.py
datasae/converter/connection/: minio.py
datasae/converter_spreadsheet/: __init__.py  spreadsheet.py
datasae/datasource/: __init__.py  api.py  cassandra.py  config.py  dbt.py  elasticsearch.py  file.py  google.py  google_bigquery.py  minios3.py  mongodb.py  mysql.py  postgresql.py
datasae/export/: result.py  rules.py
datasae/export_import/: result.py  rules.py
datasae/notification/: push.py
datasae/profiling/: __init__.py  general.py  prodiling.py  profiling.py
datasae/quality/: comformity.py  comformity.py--temp  comformity2.py  completeness.py  consistency.py  timeliness.py  uniqueness.py
htmlcov/: class_index.html  d_0d9a23f978b49192___init___py.html  d_0d9a23f978b49192___main___py.html  d_0d9a23f978b49192_boolean_py.html  d_0d9a23f978b49192_example_py.html  d_0d9a23f978b49192_exception_py.html  d_0d9a23f978b49192_float_py.html  d_0d9a23f978b49192_integer_py.html  d_0d9a23f978b49192_string_py.html  d_0d9a23f978b49192_timestamp_py.html  d_0d9a23f978b49192_utils_py.html  d_474784d03ccee79b___init___py.html  d_474784d03ccee79b_gsheet_py.html  d_474784d03ccee79b_local_py.html  d_474784d03ccee79b_s3_py.html  d_474784d03ccee79b_sql_py.html  d_6d985bbb8128dc4d___init___py.html  d_6d985bbb8128dc4d_test_gsheet_py.html  d_6d985bbb8128dc4d_test_local_py.html  d_6d985bbb8128dc4d_test_s3_py.html  d_6d985bbb8128dc4d_test_sql_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_boolean_py.html  d_a44f0ac069e85531_test_example_py.html  d_a44f0ac069e85531_test_exception_py.html  d_a44f0ac069e85531_test_float_py.html  d_a44f0ac069e85531_test_integer_py.html  d_a44f0ac069e85531_test_string_py.html  d_a44f0ac069e85531_test_timestamp_py.html  d_c85c3d27434e9f00___init___py.html  function_index.html  index.html  status.json  z_0d9a23f978b49192___main___py.html  z_0d9a23f978b49192_boolean_py.html  z_0d9a23f978b49192_exception_py.html  z_0d9a23f978b49192_float_py.html  z_0d9a23f978b49192_integer_py.html  z_0d9a23f978b49192_string_py.html  z_0d9a23f978b49192_timestamp_py.html  (+19 more)
tests/: __init__.py  functional_testing.py  test  test_boolean.py  test_example.py  test_exception.py  test_float.py  test_geospatial.py  test_integer.py  test_string.py  test_timestamp.py
tests/credential/: example.env
tests/data/: checker.json  config.json  config.yaml  creds.json  data.csv  data.json  data.parquet  data.xlsx  query.sql
tests/pluggy_test/: datasource-test.py  main.py  result-test.py
tests/sql/: readme.txt
tests/test_converter/: __init__.py  test_gsheet.py  test_local.py  test_minio.py  test_postgresql.py  test_s3.py  test_sql.py
tests/test_converter/test_checker/: __init__.py
