# This file is part of DataSae and is released under
# the AGPL-3.0-only License: https://opensource.org/license/agpl-v3/

[build-system]
requires = ['setuptools>=61.0', 'setuptools-git-versioning<2']
build-backend = 'setuptools.build_meta'

[project]
name = 'DataSae'
description = 'Data Quality Framework provides by Jabar Digital Service'
readme = 'README.md'
requires-python = '>=3.8'
license = {text = 'AGPL-3.0-only'}
keywords = [
    'data quality framework',
    'data sae',
    'good data',
    'data bagus',
    'validation',
    'jds',
    'jabar digital service',
    'data engineer'
]
authors = [
  {name = 'Pipin Fitriadi'},
  {name = 'Agistya Anugrah Dwiutama'},
  {name = 'Riska Amalia'},
  {name = 'Rizky Prilian Dwicahya'},
  {name = 'Misdan Wijaya'},
  {name = 'Fauzan Muhammad Rabbani'},
  {name = 'Hanief Fatchudin'},
  {name = 'Adi Bintang Pradana'},
  {name = 'Firman Ramadan'},
  {name = 'Raihan Jauhari'},
  {name = 'Puji Nur Hidayah'},
  {email = 'pipinfitriadi@gmail.com'},
  {email = 'agistyaanugrah@gmail.com'},
  {email = 'riskaamalia.mail@gmail.com'},
  {email = 'rizky.prilian@gmail.com'},
  {email = 'misdan.wijaya07@gmail.com'},
  {email = 'fauzanmrabbani@gmail.com'},
  {email = 'hanieffatchudin@gmail.com'},
  {email = 'adibintangprada@gmail.com'},
  {email = 'firmanramadan97@gmail.com'},
  {email = 'raihanjauhari@gmail.com'},
  {email = 'pujinhidayah@gmail.com'}
]
maintainers = [
  {email = 'dataengineering@digitalservice.id'},
  {email = 'jds.dataengineer@gmail.com'}
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Programming Language :: Python :: 3.8',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Quality Assurance'
]
dependencies = ['pandas']
dynamic = ['version']

[project.urls]
Docs = 'https://jabardigitalservice.github.io/DataSae/'
Repository = 'https://github.com/jabardigitalservice/DataSae'

[tool.coverage.run]
relative_files = true

[tool.setuptools-git-versioning]
enabled = true
template = '{tag}'
dev_template = '{tag}'
dirty_template = '{tag}'
