# Copyright (C) Free Software Foundation, Inc. All rights reserved.
# Licensed under the AGPL-3.0-only License. See LICENSE in the project root
# for license information.

[build-system]
requires = ['setuptools>=61.0', 'setuptools-git-versioning<2']
build-backend = 'setuptools.build_meta'

[project]
name = 'DataSae'
description = 'Data Quality Framework provides by Jabar Digital Service'
readme = 'README.md'
requires-python = '>=3.8'
license = {text = 'AGPL-3.0-only'}
keywords = [
    'data quality framework',
    'data sae',
    'good data',
    'data bagus',
    'validation',
    'jds',
    'jabar digital service',
    'data engineer'
]
authors = [
  {name = 'pipinfitriadi@gmail.com'},
  {name = 'agistyaanugrah@gmail.com'},
  {name = 'riskaamalia.mail@gmail.com'},
  {name = 'rizky.prilian@gmail.com'},
  {name = 'misdan.wijaya07@gmail.com'},
  {name = 'fauzanmrabbani@gmail.com'},
  {name = 'hanieffatchudin@gmail.com'},
  {name = 'adibintangprada@gmail.com'},
  {name = 'firmanramadan97@gmail.com'},
  {name = 'raihanjauhari@gmail.com'},
  {name = 'pujinhidayah@gmail.com'}
  # {name = 'Pipin Fitriadi', email = 'pipinfitriadi@gmail.com'},
  # {name = 'Agistya Anugrah Dwiutama', email = 'agistyaanugrah@gmail.com'},
  # {name = 'Riska Amalia', email = 'riskaamalia.mail@gmail.com'},
  # {name = 'Rizky Prilian Dwicahya', email = 'rizky.prilian@gmail.com'},
  # {name = 'Misdan Wijaya', email = 'misdan.wijaya07@gmail.com'},
  # {name = 'Fauzan Muhammad Rabbani', email = 'fauzanmrabbani@gmail.com'},
  # {name = 'Hanief Fatchudin', email = 'hanieffatchudin@gmail.com'},
  # {name = 'Adi Bintang Pradana', email = 'adibintangprada@gmail.com'},
  # {name = 'Firman Ramadan', email = 'firmanramadan97@gmail.com'},
  # {name = 'Raihan Jauhari', email = 'raihanjauhari@gmail.com'},
  # {name = 'Puji Nur Hidayah', email = 'pujinhidayah@gmail.com'}
]
maintainers = [
  {name = 'dataengineering@digitalservice.id'},
  {name = 'jds.dataengineer@gmail.com'}
  # {name = 'JDS Data Engineer Official Mail', email = 'dataengineering@digitalservice.id'},
  # {name = 'JDS Data Engineer Mail', email = 'jds.dataengineer@gmail.com'}
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Programming Language :: Python :: 3.8',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Quality Assurance'
]
dependencies = ['pandas', 'typer[all]']
scripts = { datasae = 'datasae.__main__:cli' }
dynamic = ['version']

[project.optional-dependencies]
converter = ['pyyaml', 'fastparquet', 'openpyxl']
gsheet = ['google-api-python-client', 'gspread==5.12.0']
s3 = ['minio']
sql = ['sqlalchemy', 'psycopg2-binary', 'mysqlclient', 'pymysql']

[project.urls]
Docs = 'https://jabardigitalservice.github.io/DataSae/'
Repository = 'https://github.com/jabardigitalservice/DataSae'

[tool.coverage.run]
relative_files = true

[tool.setuptools-git-versioning]
enabled = true
template = '{tag}'
dev_template = '{tag}'
dirty_template = '{tag}'
